plugins {
  id("application")
}

application {
  mainClass = "jtamaro.example.Application"
}

dependencies {
  implementation project(":lib")
  implementation project(":music")
}

java {
  toolchain.languageVersion.set(JavaLanguageVersion.of(25))
}
